--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "modern-rcon": "^1.0.3",
     "next": "latest",
     "react": "17.0.2",
+    "react-device-detect": "^2.2.2",
     "react-dom": "17.0.2"
   }
 }
